--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,105 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="16dp"
-    android:paddingLeft="16dp"
-    android:paddingStart="16dp"
-    android:paddingRight="16dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="16dp"
-    android:orientation="vertical"
-    android:weightSum="3"
+    android:scrollbars="none"
     tools:context=".FirstActivity">
 
+    <!-- Notice that this LinearLayout is the only direct child of the ScrollView. Like stated, ScrollView should have only one direct child.       -->
     <LinearLayout
-        android:id="@+id/firstLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
-
-        <EditText
-            android:id="@+id/edFirstName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/first_name"
-            android:inputType="textCapWords"/>
-
-        <EditText
-            android:id="@+id/edMiddleName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
-            android:hint="@string/middle_name"
-            android:inputType="textCapWords"/>
-
-        <EditText
-            android:id="@+id/edLastName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/last_name"
-            android:inputType="textCapWords"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/secondLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_viewgroups_top"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        android:paddingStart="16dp"
+        android:paddingRight="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp"
         android:orientation="vertical"
-        android:baselineAligned="false">
+        android:weightSum="3">
 
-        <RelativeLayout
-            android:id="@+id/firstRelativeLayout"
+        <LinearLayout
+            android:id="@+id/firstLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/padding_parent_top_bottom"
-            android:paddingLeft="@dimen/padding_parent_left_right"
-            android:paddingStart="@dimen/padding_parent_left_right"
-            android:paddingRight="@dimen/padding_parent_left_right"
-            android:paddingEnd="@dimen/padding_parent_left_right"
-            android:paddingBottom="@dimen/padding_parent_top_bottom">
-
-            <TextView
-                android:id="@+id/txtPhoneNumberLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:labelFor="@id/edPhoneNumber"
-                android:text="@string/phoneNumberLabel"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
-
-            <Spinner
-                android:id="@+id/spnPhoneCountryCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtPhoneNumberLabel"
-                android:layout_alignBottom="@id/edPhoneNumber"
-                android:entries="@array/array_phone_country_codes"/>
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
             <EditText
-                android:id="@+id/edPhoneNumber"
+                android:id="@+id/edFirstName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/first_name"
+                android:inputType="textCapWords"/>
+
+            <EditText
+                android:id="@+id/edMiddleName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/middle_name"
+                android:inputType="textCapWords"/>
+
+            <EditText
+                android:id="@+id/edLastName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/last_name"
+                android:inputType="textCapWords"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/secondLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_viewgroups_top"
+            android:orientation="vertical"
+            android:baselineAligned="false">
+
+            <RelativeLayout
+                android:id="@+id/firstRelativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/txtPhoneNumberLabel"
-                android:layout_toRightOf="@id/spnPhoneCountryCode"
-                android:layout_toEndOf="@id/spnPhoneCountryCode"
-                android:layout_marginTop="5dp"
-                android:hint="@string/phone_number"
-                android:inputType="phone"/>
-        </RelativeLayout>
+                android:paddingTop="@dimen/padding_parent_top_bottom"
+                android:paddingLeft="@dimen/padding_parent_left_right"
+                android:paddingStart="@dimen/padding_parent_left_right"
+                android:paddingRight="@dimen/padding_parent_left_right"
+                android:paddingEnd="@dimen/padding_parent_left_right"
+                android:paddingBottom="@dimen/padding_parent_top_bottom">
 
-        <RelativeLayout
-            android:id="@+id/secondRelativeLayout"
+                <TextView
+                    android:id="@+id/txtPhoneNumberLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/edPhoneNumber"
+                    android:text="@string/phoneNumberLabel"
+                    android:textStyle="bold"
+                    android:textSize="18sp"/>
+
+                <Spinner
+                    android:id="@+id/spnPhoneCountryCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtPhoneNumberLabel"
+                    android:layout_alignBottom="@id/edPhoneNumber"
+                    android:entries="@array/array_phone_country_codes"/>
+
+                <EditText
+                    android:id="@+id/edPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtPhoneNumberLabel"
+                    android:layout_toRightOf="@id/spnPhoneCountryCode"
+                    android:layout_toEndOf="@id/spnPhoneCountryCode"
+                    android:layout_marginTop="5dp"
+                    android:hint="@string/phone_number"
+                    android:inputType="phone"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/secondRelativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_viewgroups_top"
+                android:paddingTop="@dimen/padding_parent_top_bottom"
+                android:paddingLeft="@dimen/padding_parent_left_right"
+                android:paddingStart="@dimen/padding_parent_left_right"
+                android:paddingRight="@dimen/padding_parent_left_right"
+                android:paddingEnd="@dimen/padding_parent_left_right"
+                android:paddingBottom="@dimen/padding_parent_top_bottom">
+
+                <TextView
+                    android:id="@+id/txtEmailAddressLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/edEmailAddress"
+                    android:text="@string/emailAddressLabel"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/textSize18"/>
+
+                <EditText
+                    android:id="@+id/edEmailAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/txtEmailAddressLabel"
+                    android:hint="@string/emailAddress"
+                    android:inputType="textEmailAddress"
+                    android:autofillHints="email_address"/>
+            </RelativeLayout>
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/firstFrameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_viewgroups_top"
@@ -110,60 +149,28 @@
             android:paddingEnd="@dimen/padding_parent_left_right"
             android:paddingBottom="@dimen/padding_parent_top_bottom">
 
-            <TextView
-                android:id="@+id/txtEmailAddressLabel"
+            <Button
+                android:id="@+id/btnCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:labelFor="@id/edEmailAddress"
-                android:text="@string/emailAddressLabel"
-                android:textStyle="bold"
-                android:textSize="@dimen/textSize18"/>
+                android:layout_gravity="left|start"
+                android:text="@string/buttonCancel"/>
 
-            <EditText
-                android:id="@+id/edEmailAddress"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_below="@id/txtEmailAddressLabel"
-                android:hint="@string/emailAddress"
-                android:inputType="textEmailAddress"
-                android:autofillHints="email_address"/>
-        </RelativeLayout>
+                android:layout_gravity="bottom"
+                android:gravity="center_horizontal"
+                android:text="@string/textNeedHelp"
+                android:textStyle="italic"
+                android:textColor="@color/colourGreen"/>
+
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|end"
+                android:text="@string/buttonSave"/>
+        </FrameLayout>
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/firstFrameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_viewgroups_top"
-        android:paddingTop="@dimen/padding_parent_top_bottom"
-        android:paddingLeft="@dimen/padding_parent_left_right"
-        android:paddingStart="@dimen/padding_parent_left_right"
-        android:paddingRight="@dimen/padding_parent_left_right"
-        android:paddingEnd="@dimen/padding_parent_left_right"
-        android:paddingBottom="@dimen/padding_parent_top_bottom">
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|start"
-            android:text="@string/buttonCancel"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="center_horizontal"
-            android:text="@string/textNeedHelp"
-            android:textStyle="italic"
-            android:textColor="@color/colourGreen"/>
-
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|end"
-            android:text="@string/buttonSave"/>
-    </FrameLayout>
-</LinearLayout>
+</ScrollView>
